--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
   flutter_feather_icons: ^2.0.0+1
+  wallpaper: ^1.1.0
 
 
 dev_dependencies:
