--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,4 +31,9 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+
+
+
+    <!-- permissions
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> -->
 </manifest>
